client/public/css/user.css
/*General custom styles applied to all elements in the body*/

body {
    font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
    background-image: url(../images/background.jpg);
    font-weight: 400;
    font-size: 15px;
}


/*custom styling applicable to navigation bar and login/signup forms*/

.navbar {
    color: rgb(127, 124, 124);
    font-size: 16px;
    padding-bottom: 0px;
    padding-top: 7px;
    text-align: center;
    border-top: 1px solid rgb(219, 229, 232);
    border-radius: 0 0 5px 5px;
    background: rgb(225, 234, 235);
    background: repeating-linear-gradient(-45deg, rgb(247, 247, 247), rgb(247, 247, 247) 15px, rgb(225, 234, 235) 15px, rgb(225, 234, 235) 30px, rgb(247, 247, 247) 30px);
}

.navbar-right {
    margin-right: 20px
}

h2 {
    text-align: center;
    font-weight: bold;
    color: #342D7E
}

h4 {
    font-size: 20px;
    font-weight: bold;
    color: #342D7E
}

.sr-only,
.form-control {
    margin-top: 2px;
    margin-bottom: 2px;
    font-size: 16px;
}


/*custom styles for user home-page*/

.row {
    background-color: #6F4E37;
    padding-bottom: 10px
}

.row p {
    color: white
}


/*
a.active {
    color: #000000;
    text-decoration: underline
}*/


/* Custom style for sign in form*/

form {
    font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
    font-weight: 400;
    font-size: 15px;
    max-width: 400px;
    margin-top: 5%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 0 0 5px 5px;
    box-shadow: 0 0 5px 5px rgb(130, 130, 233);
    padding: 40px 10px 40px 10px;
    background: white
}

